Changes to html files to add cart logic

--- a/Indichi/public/stylesheets/cart.css
+++ b/Indichi/public/stylesheets/cart.css
@@ -92,7 +92,7 @@ font-family: PT Sans;
     background-color:white;
 }
 
-.btnShowUsers{
+.btnCheckOut{
     float:right;
     display: inline-block;
         white-space: nowrap;
