--- a/Indichi/public/stylesheets/Home.css
+++ b/Indichi/public/stylesheets/Home.css
@@ -26,6 +26,7 @@
 #logo{
     width:900px;
     height:200px;
+    margin:auto;
     background-repeat:no-repeat;
     background-size:contain;
     background-color:#FFFCFD;
@@ -70,6 +71,7 @@
 }
 
 #poster{
+    margin:auto;
     width:1200px;
     height:500px;
     background-image:url("../images/poster.jpg");
@@ -106,6 +108,7 @@
 }
 
 #navigator{
+    margin:auto;
     width:1200px;
     height:500px;
 }
@@ -127,6 +130,7 @@
 }
 
 #footer{
+    margin:auto;
     width:1200px;
     height:300px;
     background-color:#353740;
